updated and change logic screens